--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,7 @@ primary_region = 'sjc'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
+
+[mounts]
+  source="umevolume"
+  destination="/data"
